--- a/testBufferflip/pom.xml
+++ b/testBufferflip/pom.xml
@@ -42,7 +42,13 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
             <version>2.1.4.RELEASE</version>
         </dependency>
-
+        <!--mysql-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.47</version>
+            <scope>runtime</scope>
+        </dependency>
         <!--读取excel文件-->
 
         <dependency>
@@ -84,6 +90,11 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>3.11</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.28</version>
         </dependency>
     </dependencies>
 </project>
